kubernetes/apps/media/bazarr/bazarr-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: bazarr-volume
          persistentVolumeClaim:
            claimName: bazarr-volume-pvc
        - name: bazarr-config-ini
          configMap:
            name: init-bazarr-files
            items:
              - key: config.ini
                path: config.ini
            defaultMode: 0644
        - name: bazarr-entrypoint-sh
          configMap:
            name: init-bazarr-files
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
            defaultMode: 0755
        - name: movies-volume
          persistentVolumeClaim:
            claimName: bazarr-movies-pvc
        - name: tvshows-volume
          persistentVolumeClaim:
            claimName: bazarr-tvshows-pvc
        - name: tmpvol
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      containers:
        - name: bazarr
          image: ghcr.io/onedr0p/bazarr:1.4.2@sha256:a349a7942fd1f53ccfe5231862de10bcd96909319e40903f2d1734407e4badc0
          command: ["/bin/sh"]
          args: ["-c", "/app/entrypoint.sh"]
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: bazarr-volume
              mountPath: /config
            - name: bazarr-config-ini
              mountPath: /app/config.ini
              subPath: config.ini
            - name: bazarr-entrypoint-sh
              mountPath: /app/entrypoint.sh
              subPath: entrypoint.sh
            - name: movies-volume
              mountPath: /media/movies
            - name: tvshows-volume
              mountPath: /media/tvshows
            - name: tmpvol
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6767
  selector:
    app: bazarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: bazarr-ingress
  namespace: media
spec:
  ingressClassName: nginx-external
  rules:
    - host: media.${DOMAIN_NAME}
      http:
        paths:
          - path: /bazarr
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
